tests/fixtures/invalid/pow_list_int_set.py
# Cannot call pow() with List[int], Int, Set[int]
x = pow([1, 2, 3], 1, {1, 2, 3})
